crates/weft-snapshots/tests/snapshots/a2ui/example-segmented-control.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-segmented-control as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "view"
          ],
          "accessibility": {
            "label": "Calendar"
          }
        },
        {
          "id": "view",
          "component": "ChoicePicker",
          "variant": "mutuallyExclusive",
          "options": [
            {
              "label": "Day",
              "value": "day"
            },
            {
              "label": "Week",
              "value": "week"
            },
            {
              "label": "Month",
              "value": "month"
            }
          ],
          "value": {
            "path": "/view"
          },
          "label": "View",
          "displayStyle": "chips"
        }
      ]
    }
  }
]
